[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scenes/SubOptions/Tagging/TaggingOptions.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/General/DividedContainer/DividedContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/TagSidebar.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/TagEditor.gd" type="Script" id=4]

[node name="TagEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="TopBuffer" type="Control" parent="VBoxContainer"]
margin_right = 1120.0
margin_bottom = 3.0
rect_min_size = Vector2( 0, 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 3.0
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="VSeparatorL" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 597.0
custom_constants/separation = 10

[node name="ItemTagsSidebar" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_right = 211.0
margin_bottom = 597.0

[node name="VSeparatorB" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 211.0
margin_right = 221.0
margin_bottom = 597.0
custom_constants/separation = 10

[node name="DividedContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_right = 1082.0
margin_bottom = 597.0

[node name="VSeparatorR" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 1082.0
margin_right = 1085.0
margin_bottom = 597.0
custom_constants/separation = 3

[node name="TaggingOptions" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 1085.0
margin_right = 1120.0
margin_bottom = 597.0
